# sws

./: .gitignore  Makefile.am  TODO.md  configure.ac  jsonnotes.txt  main.cpp  scandal.m3u  sws.cbp  sws.depend  sws.layout  t.txt
include/: bluetooth.h  bt_device.h  config.h  console.h  db.h  db_mysql.h  db_queue.h  db_sqlite.h  joystick.h  md5.h  network.h  player.h  playlist.h  server.h  spotify.h  track.h  utility.h  wsocket.h
src/: bluetooth.cpp  bt_device.cpp  config.cpp  console.cpp  db.cpp  db_mysql.cpp  db_queue.cpp  db_sqlite.cpp  joystick.cpp  network.cpp  player.cpp  playlist.cpp  server.cpp  spotify.cpp  track.cpp  utility.cpp  wsocket.cpp
tests/: main.cpp
tests/include/: bluetooth_tests.h
tests/src/: bluetooth_tests.cpp
